fixing grid alignment for main section

--- a/personal-website/styles/clothes-crochet.css
+++ b/personal-website/styles/clothes-crochet.css
@@ -67,11 +67,10 @@ nav a:hover {
 
 /* Main Content Styles */
 main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto auto;
     gap: 40px;
+    padding: 40px;
 }
 
 .collage-card {
@@ -87,25 +86,71 @@ main {
     max-width: 1000px;
 }
 
-.clothes-collage-img, .crochet-collage-img {
+.clothes-collage-img {
     width: 40%;
     height: auto;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    align-items: center;
 }
 
+.crochet-collage-img {
+    width:40%;
+    height: auto;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 5;
+    align-items: center;
+}
 .collage-card-txt {
     width: 55%;
 }
 
-.collage-card-txt h3, .collage-card-txt h4 {
+.collage-card-txt h3 {
     font-size: 20px;
     color: #38618c;
     margin-top: 0;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center
 }
 
-.collage-card-txt p1, .collage-card-txt p2 {
+.collage-card-txt h4 {
+    font-size: 20px;
+    color: #38618c;
+    margin-top: 0;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    text-align: center;
+}
+
+.collage-card-txt p1 {
     font-size: 16px;
     color: #38618c;
     line-height: 1.6;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    text-align: left;
+}
+
+.collage-card-txt p2 {
+    font-size: 16px;
+    color: #38618c;
+    line-height: 1.6;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    text-align: left;
 }
 
 .home-grid {
